plugins {
    id 'java'
    id 'com.gradleup.shadow' version '9.4.2'
}

group = 'me.lulu'
version = '26.1.2-0.1.0-dev'

def pluginVersion = version.toString()

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

processResources {
    inputs.property('pluginVersion', pluginVersion)

    filesMatching('plugin.yml') {
        expand 'pluginVersion': pluginVersion
    }
}

shadowJar {
    relocate("org.apache", "org.mcwonderland.uhc.lib.apache")
    archiveClassifier.set("")
}

repositories {
    mavenLocal()
    mavenCentral()

    maven {
        name = 'm2-dv8tion'
        url = uri('https://m2.dv8tion.net/releases')
    }
    maven { url = uri('https://nexus.scarsz.me/content/groups/public/') }


    maven { url = uri('https://hub.spigotmc.org/nexus/content/repositories/snapshots/') }
    maven { url = uri('https://oss.sonatype.org/content/groups/public/') }
    maven { url = uri('https://repo.papermc.io/repository/maven-public/') }

    if (project.hasProperty('useNaluwanRepo')) {
        maven {
            name = "naluwan"
            url = uri("https://repo.naluwan.net/public-snapshot")
        }
    }
}

dependencies {
    compileOnly 'com.discordsrv:discordsrv:1.30.5'
    compileOnly 'net.luckperms:api:5.5'

    compileOnly files('libs/Chunky-Bukkit-1.5.3.jar')

    compileOnly 'io.papermc.paper:paper-api:26.1.2.build.+'

    implementation 'commons-lang:commons-lang:2.6'

    // Lombok
    compileOnly 'org.projectlombok:lombok:1.18.44'
    annotationProcessor 'org.projectlombok:lombok:1.18.44'

    testCompileOnly 'org.projectlombok:lombok:1.18.44'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.44'

    testImplementation 'io.papermc.paper:paper-api:26.1.2.build.+'
    testImplementation 'junit:junit:4.13'
}

test {
    useJUnit()

    maxHeapSize = '1G'
}

configurations {
    testCompileOnly.extendsFrom compileOnly
}

tasks.withType(JavaCompile).configureEach {
    options.release.set(25)
    options.forkOptions.jvmArgs.addAll(['--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'])
}
